--- a/10-组件化开发/02-全局组件和局部组件.html
+++ b/10-组件化开发/02-全局组件和局部组件.html
@@ -7,10 +7,47 @@
 </head>
 <body>
 
+<div id="app1">
+  <my-cpn2></my-cpn2>
+</div>
+
+<hr>
+
+<div id="app2">
+  <my-cpn2></my-cpn2>
+</div>
+
 
 </body>
 </html>
 
 <script>
+
+  //1.创建组件构造器
+  const cpn2 = Vue.extend({
+    template: `
+    <div>
+      <h2>我是标题</h2>
+      <p>自定义组件内容</p>
+    </div>
+    `
+  })
+
+
+  //2.注册组件（全局组件，意味着可以再多个Vue的示例下面使用）
+  //Vue.component('my-cpn2', cpn2);
+
+  //3.创建Vue实例
+  const app1 = new Vue({
+    el: '#app1',
+    components: {
+      //局部组件 只在该Vue实例下可以使用
+      'my-cpn2': cpn2
+    }
+  })
+
+  const app2 = new Vue({
+    el: '#app2'
+  })
 
 </script>
